Added get recipe ID route and tests
